--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,25 +21,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Go 1.22
+    - name: Set up Go 1.23
       uses: actions/setup-go@v2
       with:
-        go-version: 1.22
+        go-version: 1.23
 
     - name: Build
-      run: go build -o go-web-app
+      run: go build -o golang-todo-app
 
   code-quality:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1.1.0
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.56.2
+    - name: Run GolangCI-Lint Action by building from repository
+      uses: matoous/golangci-lint-action@v1.1.0
   
   push:
     runs-on: ubuntu-latest
@@ -57,7 +55,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD}}
 
     - name: Build and Push action
       uses: docker/build-push-action@v6
