--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,7 @@ name: CI/CD
 # Exclude the workflow to run on changes to the helm chart
 on:
   push:
-    branches:
-      - main
+    branches: [main]
     paths-ignore:
       - 'helm/**'
       - 'k8s/**'
@@ -48,23 +47,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Build Docker image
+      run: docker build -t takalezi6/golang-todo-app:${{ github.sha }} .
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD}}
-
-    - name: Build and Push action
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/golang-todo-app:${{github.run_id}}
-
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: Push Docker image
+      run: docker push takalezi6/golang-todo-app:${{ github.run_id }}
+    
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
 
