--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1.1.0
+    - name: Check out repo
+      uses: actions/checkout@v4
 
-    - name: Run GolangCI-Lint Action by building from repository
-      uses: matoous/golangci-lint-action@v1.1.0
+    - name: Run GolangCI-Lint Action 
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.56.2
   
   push:
     runs-on: ubuntu-latest
@@ -53,7 +55,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Push Docker image
