--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,17 @@ jobs:
     - name: Build
       run: go build -o golang-todo-app
 
-  code-quality:
-    runs-on: ubuntu-latest
+  #code-quality:
+    #runs-on: ubuntu-latest
 
-    steps:
-    - name: Check out repo
-      uses: actions/checkout@v4
+  #  steps:
+  #  - name: Check out repo
+  #    uses: actions/checkout@v4
 
-    - name: Run GolangCI-Lint Action 
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.56.2
+  #  - name: Run GolangCI-Lint Action 
+  #    uses: golangci/golangci-lint-action@v6
+  #    with:
+  #      version: v1.56.2
   
   push:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build Docker image
-      run: docker build -t takalezi6/golang-todo-app:${{ github.sha }} .
+      run: docker build -t takalezi6/golang-todo-app:${{ github.run_id }} .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
