--- a/helm/golang-todo-app-chart/values.yaml
+++ b/helm/golang-todo-app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: takalezi6/golang-todo-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1"
+  tag: "11664302391"
 
 ingress:
   enabled: "true"
