--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,10 @@ jobs:
           fetch-depth: 0
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@v3.1.0
-        env:
-          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-          sonar.projectKey: cybermazi_golang-todo-app
-          sonar.organization: cybermazi
+        with:
+          SonarToken: ${{secrets.SONAR_TOKEN}}
+          projectKey: cybermazi_golang-todo-app
+          organization: cybermazi
 
 
   build:
