--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           version: v1.60
 
   sonarcloud:
-    name: Perform SonarCloud Scan
+    name: Perform SonarQube Cloud Scan
     runs-on: ubuntu-latest
 
     needs: golangci
@@ -36,10 +36,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@v3.1.0
-        with:
-          args: "-Dsonar.projectKey=cybermazi_golang-todo-app -Dsonar.organization=cybermazi"
         env:
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
           
