--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.projectKey=cybermazi_golang-todo-app
 sonar.organization=cybermazi
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
