--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-        with:
-          args: |
-            -Dsonar.cfile.suffixes=-
-            -Dsonar.cppfile.suffixes=-
-            -Dsonar.objcfile.suffixes=-
+        #with:
+        #  args: |
+        #    -Dsonar.cfile.suffixes=-
+        #    -Dsonar.cppfile.suffixes=-
+        #    -Dsonar.objcfile.suffixes=-
         
           
 
